Setup user authentication.

--- a/ShoeInventory.csproj
+++ b/ShoeInventory.csproj
@@ -33,4 +33,7 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shoes\" />
+  </ItemGroup>
 </Project>
